--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,5 @@
 @import "nav.css";
+@import "footer.css";
 
 /* <<<<<<<<<<<<<< HERO SECTION  >>>>>>>>>>>>>>  */
 .hero-section {
@@ -149,4 +150,34 @@
 .pre-btn:hover img,
 .next-btn:hover img {
   opacity: 1;
+}
+
+/* <<<<<<<<<<<<<< COLLECTION SECTION  >>>>>>>>>>>>>>  */
+.collection-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+.collection {
+  position: relative;
+}
+.collection img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.collection p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  font-size: 50px;
+  text-transform: capitalize;
+}
+.collection:nth-child(3) {
+  grid-column: span 2;
+  margin-bottom: 10px;
 }
